--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   uuid: ^4.5.1
   flutter_riverpod: ^2.5.3
+  path_provider: ^2.1.4
+  sqflite: ^2.4.0
 
 dev_dependencies:
   flutter_test:
