--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_riverpod: ^2.5.3
   path_provider: ^2.1.4
   sqflite: ^2.4.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
